# Quadratic_equation_Solver

./: .clang-format  .gitignore  CMakeLists.txt  README.md
SingleThreadSolution/: README.md  main.cpp
data/: generate_test_data.py  test.data
src/: ConcurrentQueue.hpp  ConsoleOutput.hpp  EquationCoefficients.hpp  SolvingManager.cpp  SolvingManager.hpp  main.cpp
